--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -54,6 +54,7 @@
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/ListaDeArticulos">Lista</a></li>
+                        <li><a runat="server" href="~/CarritoDeCompras">Carrito</a></li>
                     </ul>
                 </div>
             </div>
