--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="Contact">Contact</a>
                 <a class="nav-link" href="About">About</a>
                 <a class="nav-link" href="ListaDeArticulos">Articulos</a>
-                <a class="nav-link" href="CarritoDeCompras"><i class="li li-cart"></i></a>
+                <a class="nav-link" href="CarritoDeCompras"><i class="li-li-cart"></i></a>
                 <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
               </div>
             </div>
