--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -17,6 +17,7 @@
     <!--Agrego CSS de Bootstrap 5 -->
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="Content/styles.css" rel="stylesheet" />
 
 </head>
@@ -40,7 +41,7 @@
                 <a class="nav-link" href="Contact">Contact</a>
                 <a class="nav-link" href="About">About</a>
                 <a class="nav-link" href="ListaDeArticulos">Articulos</a>
-                <a class="nav-link" href="CarritoDeCompras"><i class="li-li-cart"></i></a>
+                <a class="nav-link" href="CarritoDeCompras"><i class="fa fa-shopping-cart"></i></a>
                 <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
               </div>
             </div>
