--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -18,42 +18,55 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link href="Content/styles.css" rel="stylesheet" />
 
 </head>
 <body>
     <form runat="server">
 
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="img/LAVE.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            </a>
-
+          <div class="container-fluid"> 
+              
+              
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="Default">Home</a>
-                <a class="nav-link" href="Contact">Contact</a>
-                <a class="nav-link" href="About">About</a>
-                <a class="nav-link" href="ListaDeArticulos">Articulos</a>
-                <a class="nav-link" href="CarritoDeCompras"><i class="fa fa-shopping-cart"></i></a>
-                <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link active" aria-current="page" href="Default">INICIO</a>
+                <a class="nav-link" href="Contact">CONTACTO</a>
+                <a class="nav-link" href="About">SOMOS</a>
               </div>
             </div>
           </div>
         </nav>
-
+        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 145px;">
+            <a class="navbar-brand" href="Default">
+                <img src="img/LAVE.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <span class="fs-4 text-white">LAVE</span>
+            </a>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto elementos-sidebar">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="ListaDeArticulos">
+                        <i class="fas fa-store" >
+                        </i>
+                         Articulos 
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="CarritoDeCompras"><i class="fa fa-shopping-cart"></i> Carrito</a>
+                </li>
+            </ul>
+        </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>Copyright LAVE &copy; <%: DateTime.Now.Year %> - Todos los derechos reservados</p>
             </footer>
         </div>
 
