--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -26,6 +26,7 @@
     <form runat="server">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
           <div class="container-fluid"> 
               
               
@@ -42,7 +43,7 @@
             </div>
           </div>
         </nav>
-        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 145px;">
+        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 148px; min-height: 75vh; float: left; margin-top: -1%;">
             <a class="navbar-brand" href="Default">
                 <img src="img/LAVE.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 <span class="fs-4 text-white">LAVE</span>
@@ -61,9 +62,11 @@
                 </li>
             </ul>
         </div>
-        <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
+        <div class="container body-content" style="margin-left: 12%; margin-top: 1%;">
+            <section class="CuerpoPrincipal">
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+            </section>
             <hr />
             <footer>
                 <p>Copyright LAVE &copy; <%: DateTime.Now.Year %> - Todos los derechos reservados</p>
