--- a/CatalogoDeNegocio/CarritoWeb/Content/styles.css
+++ b/CatalogoDeNegocio/CarritoWeb/Content/styles.css
@@ -33,7 +33,7 @@
 }
 
 .CuerpoPrincipal{
-    min-height: 70vh;
+    min-height: 100vh;
 }
 
 .navbar{
@@ -51,6 +51,10 @@
 .iconosCard li:first-child{
     display: inline-block;
     float: right;
+}
+
+footer{
+    text-align: center;
 }
 
 
