--- a/CatalogoDeNegocio/CarritoWeb/Content/styles.css
+++ b/CatalogoDeNegocio/CarritoWeb/Content/styles.css
@@ -28,8 +28,13 @@
 }
 
 .card img{
-    height: 250px;
-    width: auto;
+    width: 300px;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .CuerpoPrincipal{
