Cambios aunque con fallas, de contar cantidad de articulos en carritos, y inicio de detalles de articulos

--- a/CatalogoDeNegocio/CarritoWeb/Content/styles.css
+++ b/CatalogoDeNegocio/CarritoWeb/Content/styles.css
@@ -27,8 +27,14 @@
     border-radius: 5px;
 }
 
-.card img{
-    height: 370px;
+.imgCarrito{
+    width: 200px;
+    height: auto;
+}
+
+.imgArticulo {
+    width: auto;
+    height: 330px;
 }
 
 .center {
