--- a/CatalogoDeNegocio/CarritoWeb/Site.Master
+++ b/CatalogoDeNegocio/CarritoWeb/Site.Master
@@ -58,7 +58,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="CarritoDeCompras"><i class="fa fa-shopping-cart"></i> Carrito <%= carritoGlobal.cantidadItems %></a>
+                    <a class="nav-link text-white" href="CarritoDeCompras"><i class="fa fa-shopping-cart"></i> Carrito <%actualizarCarrito(); %> <%= carritoGlobal.cantidadItems %></a>
                 </li>
             </ul>
         </div>
